# data-engineering-zoomcamp

./: .gitignore  pyproject.toml
week_1_basics_n_setup/2_docker_sql/: docker-compose.yaml
